# appli_V3

./: .gitignore  README.md  deploy.sh  package.json
api/: EXERCISES_IMPORT.md  PROBLEMES_ET_AMELIORATIONS.md  README.md  config.env.example  exercises_example.json  mypy.ini  pyproject.toml  render.yaml  requirements.txt  ruff.toml
api/scripts/: reset_password.py  seed.py  seed_demo.py
api/src/api/: db.py  main.py  models.py  schemas.py  seeds.py
api/src/api/routes/: __init__.py  exercises.py  explore.py  feed.py  health.py  leaderboard.py  likes.py  notifications.py  profile.py  programs.py  share.py  shared_workouts.py  stories.py  sync.py  users.py  users_stats.py
api/src/api/services/: exercise_loader.py  program_generator.py
api/src/api/tests/: conftest.py  test_exercises.py
app/: .prettierrc  app.json  package-lock.json  package.json  pnpm-lock.yaml
app/app/: _layout.tsx  feed.tsx  index.tsx  leaderboard.tsx  login.tsx  notifications.tsx  profile.tsx  register.tsx  settings.tsx
app/app/(tabs)/: explore.tsx  feed.tsx  index.tsx  profile.tsx
app/app/challenge/: [id].tsx
app/app/profile/: [id].tsx
app/app/programme/: create.tsx  index.tsx
app/app/workouts/: completed.tsx  created.tsx
app/src/components/: AvatarPicker.tsx  ExerciseChargesChart.tsx  FeedCard.tsx  HeroSection.tsx  HistoryProgressChart.tsx  LikeButton.tsx  (+5 more)
docs/: GUIDE_EAS_BUILD.md  PLAN_PUBLICATION_2_SEMAINES.md  Roadmap.md  TESTER_IPHONE.md  TESTS_SYNCHRONISATION.md  arborescence.md  etape0.md  etape1.md  etape2.md  etape3.md  etape4.md  etape5.md  etape6.md  etape7.md
(+23 files in other folders)
